duplicate payment protection fixing saga issues